[package]
name = "micro-xrce-dds-rs"
version = "0.1.0"
edition = "2021"
description = "Minimal Micro XRCE-DDS client for no_std Embassy-rs embedded targets"
license = "MIT OR Apache-2.0"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "embassy-sync/defmt"]

[dependencies]
embedded-io-async = "0.6"
heapless = "0.8"
embassy-sync = { version = "0.8" }
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }
defmt = { version = "1.0", optional = true }
